<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".MainActivity">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        app:cardBackgroundColor="@color/color_background_light"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="0.5dp"
        app:strokeColor="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="387dp"
            android:paddingHorizontal="30dp">

            <TextView
                android:id="@+id/appName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="29dp"
                android:fontFamily="@font/montserrat_black"
                android:gravity="center"
                android:text="@string/saveastxt"
                android:textColor="@color/white"
                android:textSize="21sp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvYourTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/your_text"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:layout_constraintTop_toBottomOf="@id/appName" />

            <EditText
                android:id="@+id/etYourText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/et_background"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:hint="@string/your_text"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/tvYourTxt" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                android:layout_width="119dp"
                android:layout_height="63dp"
                android:layout_marginVertical="26dp"
                android:backgroundTint="@color/blue"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/save"
                android:textSize="17sp"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/etYourText"
                app:layout_constraintTop_toBottomOf="@id/etYourText"
                app:layout_constraintVertical_bias="0.307"
                app:layout_constraintWidth_percent="0.4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnViewSavedText"
                android:layout_width="164dp"
                android:layout_height="60dp"
                android:layout_marginVertical="26dp"
                android:backgroundTint="@color/color_background_light"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/saved_text"
                android:textColor="@color/blue"
                android:textSize="17sp"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/etYourText"
                app:layout_constraintTop_toBottomOf="@id/etYourText"
                app:layout_constraintVertical_bias="0.307"
                app:layout_constraintWidth_percent="0.55"
                app:strokeColor="@color/blue"
                app:strokeWidth="2dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnspeak"
                android:layout_width="156dp"
                android:layout_height="50dp"
                android:layout_marginVertical="26dp"
                android:layout_marginStart="80dp"
                android:backgroundTint="@color/color_background_light"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/ascolta"
                android:textColor="@color/purple"
                android:textSize="17sp"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/etYourText"
                app:layout_constraintTop_toBottomOf="@id/etYourText"
                app:layout_constraintVertical_bias="0.993"
                app:layout_constraintWidth_percent="0.55"
                app:strokeColor="@color/purple"
                app:strokeWidth="2dp" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="54dp"
                android:layout_height="50dp"
                android:layout_marginEnd="31dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnspeak"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/btnspeak"
                app:layout_constraintTop_toBottomOf="@+id/btnSave"
                app:layout_constraintVertical_bias="0.583"
                app:srcCompat="@drawable/ic_hear" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="256dp"
                android:layout_marginTop="74dp"
                android:layout_marginEnd="17dp"
                android:layout_marginBottom="270dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_draw" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>











